# SPEC2CHART

./: Cargo.toml  biz-roadmap.md  landing-linear.html  landing-stripe.html  landing-vercel.html
.claude/: post-update.sh  ralph-loop.local.md
assets/: gen_icon.py  icon.icns
assets/examples/: architecture_3d.spec  assumption_map.spec  auto3d.spec  bug_triage.spec  business_model_canvas.spec  causal_loop.spec  cloud_arch.spec  competitive_analysis.spec  customer_journey.spec  customer_onboarding.spec  decision_record.spec  design_sprint.spec  double_diamond.spec  empathy_map.spec  er_diagram.spec  experiment_board.spec  feature_showcase.spec  fishbone.spec  five_whys.spec  flowchart.spec  force_field.spec  hypothesis_canvas.spec  hypothesis_map.spec  ice_scoring.spec  impact_effort.spec  incident_response.spec  jobs_to_be_done.spec  knowledge_base_structure.spec  lean_canvas.spec  microservices.spec  mind_map.spec  network.spec  okr_tree.spec  pestle.spec  postmortem.spec  premortem.spec  problem_solution_fit.spec  project_dashboard.spec  rose_bud_thorn.spec  story_map.spec  (+12 more)
docs/: roadmap.md  spec-format-guide.md
docs/plans/: 2026-02-27-flowchart-design.md  2026-02-28-flowchart-implementation.md  2026-03-02-modular-refactor-design.md  2026-03-10-specgraph-format-design.md  2026-03-12-light-figma-skill-design.md  (+1 more)
examples/: login-flow.yaml  microservice-connectors.spec  roadmap.spec  three-tier-3d.spec  user-order-app.flow  vc-architecture.spec  vc-architecture.yaml
src/: app.rs  export.rs  history.rs  io.rs  lib.rs  main.rs  model.rs
src/app/: camera.rs  mod.rs  (+14 more)
(+34 files in other folders)
