[package]
name = "light-figma"
version = "0.1.0"
edition = "2021"
description = "A Figma-inspired flowchart application"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
image = "0.25"
printpdf = "0.7"
rfd = "0.15"

[package.metadata.bundle]
name = "Light Figma"
identifier = "com.lightfigma.app"
icon = ["icons/icon.icns"]
category = "public.app-category.graphics-design"
